--- a/debian/rules
+++ b/debian/rules
@@ -1,12 +1,20 @@
 #! /usr/bin/make -f
 
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
+
+# This has to be exported to make some magic below work.
+export DH_OPTIONS
+
+# These are locations of quilt stuff
+export QUILT_PATCHES=$(shell pwd)/debian/patches
+
 # These are used for cross-compiling and for saving the configure script
 # from having to guess our platform (since we know it already)
 DEB_BUILD_ARCH		?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 DEB_BUILD_ARCH_OS	?= $(shell dpkg-architecture -qDEB_BUILD_ARCH_OS)
 DEB_BUILD_GNU_TYPE	?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 DEB_HOST_GNU_TYPE	?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_HOST_MULTIARCH	?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 # set the number of build jobs
 ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
@@ -19,48 +27,36 @@ else
 CROSS= --build $(DEB_BUILD_GNU_TYPE)
 endif
 
-ifneq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
-    DO_TEST=no
-else
-    DO_TEST=no
-    ifeq (${DEB_BUILD_GNU_TYPE},${DEB_HOST_GNU_TYPE})
-    ifneq (${DEB_BUILD_ARCH},m68k)
-    ifneq (${DEB_BUILD_ARCH_OS},kfreebsd)
-    ifneq (${DEB_BUILD_ARCH_OS},knetbsd)
-    ifneq (${DEB_BUILD_ARCH_OS},hurd)
-        DO_TEST=yes
-    endif
-    endif
-    endif
-    endif
-    endif
-endif
+# Maemo specific
+DO_TEST=no
+SHLIBS_VERSION=7.16.2-1
 
-CFLAGS   = $(shell dpkg-buildflags --get CFLAGS)
-CFLAGS  += $(shell dpkg-buildflags --get CPPFLAGS)
-LDFLAGS  = $(shell dpkg-buildflags --get LDFLAGS)
+CFLAGS   = -O2 -Wall
+CXXLAGS  = -O2 -Wall
 
 # this will avoid unneded dependencies
-LDFLAGS += -Wl,--as-needed
+LDFLAGS  = -Wl,--as-needed
 
 # this will catch miss-linking. (e.g. undefined symbols)
 #LDFLAGS+= -Wl,-z,defs
 
 CONFIGURE_ARGS = $(CROSS) --prefix=/usr --mandir=/usr/share/man	\
-		--libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH)	\
+		--libdir=\$${prefix}/lib			\
 		--disable-dependency-tracking --enable-ipv6	\
-		--with-lber-lib=lber --disable-symbol-hiding	\
+		--without-lber-lib --disable-symbol-hiding	\
 		--enable-versioned-symbols --enable-manual	\
 		--enable-debug --disable-curldebug		\
+		--without-gssapi --disable-sspi			\
+		--without-libssh2 --without-ldap-lib		\
 		CFLAGS="$(CFLAGS)" LDFLAGS="$(LDFLAGS)"
 # this is still not ready
 #		--enable-ares
 # this fixes the ldap warning of dpkg-shlibdebs, but we dont want that.
 #		--with-ldap-lib=/usr/lib/libldap_r.so
 
-ifneq (${DEB_BUILD_ARCH_OS},hurd)
-CONFIGURE_ARGS += --with-gssapi=/usr
-endif
+#ifneq (${DEB_BUILD_ARCH_OS},hurd)
+#CONFIGURE_ARGS += --with-gssapi=/usr
+#endif
 
 build-arch: build-stamp
 build-indep: build-stamp
@@ -69,50 +65,34 @@ build: build-arch build-indep
 
 configure-stamp:
 	dh_testdir
-	mkdir -p debian/build debian/build-gnutls debian/build-nss
+	mkdir -p debian/build
+	-quilt push -a
 	# pop the last patch (nss)
 	quilt pop
 	# pop the second last patch (gnutls)
 	quilt pop
 	# get the source without nss and gnutls patches
 	tar -cf - --exclude=debian --exclude=.pc . | tar -xf - -C debian/build
-	# push the second last patch which must be gnutls
-	quilt push
-	# get the source with gnutls patch applied
-	tar -cf - --exclude=debian --exclude=.pc . | tar -xf - -C debian/build-gnutls
-	# push the last patch which must be nss
-	quilt push
-	# get the source with nss patch applied
-	tar -cf - --exclude=debian --exclude=.pc . | tar -xf - -C debian/build-nss
 	# run buildconf and make sure to copy the patched ltmain.sh
-	for flavour in build build-gnutls build-nss; do \
-		(cd debian/$$flavour && ./buildconf && cp ../../ltmain.sh .) \
+	for flavour in build; do \
+		(cd debian/$$flavour && ./buildconf) \
 	done
 	cd debian/build && ./configure ${CONFIGURE_ARGS}		\
-		--with-librtmp --with-ca-path=/etc/ssl/certs
-	cd debian/build-gnutls && ./configure ${CONFIGURE_ARGS}		\
-		--with-ca-bundle=/etc/ssl/certs/ca-certificates.crt	\
-		--without-ssl --with-gnutls
-	cd debian/build-nss && ./configure ${CONFIGURE_ARGS}		\
-		--with-ca-bundle=/etc/ssl/certs/ca-certificates.crt	\
-		--without-ssl --with-nss
+		--with-ca-path=/etc/ssl/certs
 	touch configure-stamp
 
 build-stamp: configure-stamp
 	dh_testdir
 	${MAKE} $(JOBS) -C debian/build
-	${MAKE} $(JOBS) -C debian/build-gnutls
-	${MAKE} $(JOBS) -C debian/build-nss
 ifeq (${DO_TEST},yes)
 	-${MAKE} -C debian/build test
-	-${MAKE} -C debian/build-gnutls test
-	-${MAKE} -C debian/build-nss test
 endif
 	touch build-stamp
 
 clean:
 	dh_testdir
 	dh_testroot
+	-quilt pop -a
 	$(RM) -r build-stamp configure-stamp debian/build* debian/tmp*
 
 #install: DH_OPTIONS=
@@ -121,11 +101,7 @@ install: build-stamp
 	dh_testroot
 	dh_prep
 	${MAKE} -C debian/build DESTDIR=$(shell pwd)/debian/tmp install
-	${MAKE} -C debian/build-gnutls DESTDIR=$(shell pwd)/debian/tmp-gnutls install
-	${MAKE} -C debian/build-nss DESTDIR=$(shell pwd)/debian/tmp-nss install
-	dh_install -plibcurl3-gnutls -plibcurl4-gnutls-dev --sourcedir=debian/tmp-gnutls
-	dh_install -plibcurl3-nss -plibcurl4-nss-dev --sourcedir=debian/tmp-nss
-	dh_install -Nlibcurl3-gnutls -Nlibcurl4-gnutls-dev -Nlibcurl3-nss -Nlibcurl4-nss-dev --sourcedir=debian/tmp
+	dh_install --sourcedir=debian/tmp
 	dh_lintian
 	sed -i "/dependency_libs/ s/'.*'/''/" `find . -name '*.la'`
 
@@ -142,8 +118,8 @@ binary-arch: build-stamp install
 	dh_installexamples
 	dh_installchangelogs CHANGES
 	dh_link
-	dh_strip -Nlibcurl3 -Nlibcurl3-gnutls -Nlibcurl3-nss
-	dh_strip -plibcurl3 -plibcurl3-gnutls -plibcurl3-nss --dbg-package=libcurl3-dbg
+	dh_strip -Nlibcurl3
+	dh_strip -plibcurl3 --dbg-package=libcurl3-dbg
 	dh_compress
 	dh_fixperms
 	dh_makeshlibs
