--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: curl
 Section: web
 Priority: optional
-Maintainer: Ludek Finstrle <luf@pzkagis.cz>
+Maintainer: Ludek Finstrle <luf@seznam.cz>
 XSBC-Original-Maintainer: Alessandro Ghedini <ghedo@debian.org>
 Build-Depends: debhelper (>> 5.0.41),
  autoconf,
